Add in BR custom css to JSON

--- a/template.conf
+++ b/template.conf
@@ -19,7 +19,12 @@
       "name" : "mainNav"
   } ],
 
-  "stylesheets" : [ "tweak.less", "global.less", "mobile.less" ],
+  "stylesheets" : [
+      "tweak.less",
+      "global.less",
+      "mobile.less",
+      "BR-Custom.css"
+  ],
 
   "systemCollections" : [ "gallery", "events", "products", "album" ]
 
