Add Slide Show Region

--- a/template.conf
+++ b/template.conf
@@ -11,6 +11,10 @@
     "sidebar" : {
       "name" : "Sidebar",
       "regions" : [ "header", "site", "footer" ]
+    },
+    "banner" : {
+      "name" : "Banner Page",
+      "regions" : [ "header", "fullwidth", "footer", "slideShow" ]
     }
   },
 
