Remove fullwidth from banner in config file

--- a/template.conf
+++ b/template.conf
@@ -14,7 +14,7 @@
     },
     "banner" : {
       "name" : "Banner Page",
-      "regions" : [ "header", "fullwidth", "footer", "slideShow" ]
+      "regions" : [ "header", "slideShow", "footer" ]
     }
   },
 
